--- a/index.html
+++ b/index.html
@@ -802,5 +802,6 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/chart.min.js"></script>
     <script src="assets/js/script.min.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
